changing file structure

--- a/public/travis.yml
+++ b/public/travis.yml
@@ -11,4 +11,4 @@ before_script:
 
 
 after_success:
-  - firebase deploy --token=1//06gDIsmn3O_e6CgYIARAAGAYSNwF-L9IroPMs0hcOrZWZm2kUiUoPwZNpgwvAjZfVJClfl4SW2-0vCAPGck2Wm5uGF16NC6lq8zs
+  - firebase deploy --token=${FIREBASE_API_TOKEN}
